src/objects/CventEvents__DataTransferConfiguration__c.object
<CustomObject>
    <description>Represents a configuration of a data transfer for a survey program.</description>
    <fields>
        <fullName>CventEvents__ActionType__c</fullName>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create New</fullName>
                    <default>true</default>
                    <label>Create New</label>
                </value>
                <value>
                    <fullName>Update Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SurveyProgram__c</fullName>
        <label>Survey Program</label>
        <referenceTo>CventEvents__SurveyProgram__c</referenceTo>
        <relationshipLabel>Data Transfer Configurations</relationshipLabel>
        <relationshipName>DataTransferConfigurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Data Transfer Configuration</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__SurveyProgram__c</columns>
        <columns>CventEvents__ActionType__c</columns>
        <columns>CventEvents__ObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DTC-{00000000}</displayFormat>
        <label>Data Transfer Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Transfer Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>